config/k8s/prod/deployment.yaml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: go-template
  namespace: sdyxmall
spec:
  replicas: 2
  template:
    metadata:
      labels:
        app: go-template
        version: v0.1
    spec:
      containers:
        - name: go-template
          image: reg.maizuo.com/jike/go-template:#tag
          imagePullPolicy: Always
          resources:
            limits:
              cpu: 100m
              memory: 256Mi
            requests:
              cpu: 50m
              memory: 128Mi
          volumeMounts:
            - name: go-template-vol
              mountPath: /data/logs
          command: ["/bin/sh","-c"]
          args: ["./go-template -conf config"]
      volumes:
        - name: go-template-vol
          hostPath:
            path: /data/logs
