config/k8s/prod/svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: go-template
  namespace: sdyxmall
  labels:
    kubernetes.io/cluster-service: "true"
    kubernetes.io/name: "go-template"
spec:
  ports:
    - name: go-template
      port: 80
      targetPort: 8080
  selector:
    app: go-template
